--- a/less/marketing-page.less
+++ b/less/marketing-page.less
@@ -55,7 +55,7 @@
   }
 
   @media @mobile {
-    padding-top: 45%;
+    padding-top: 50%;
     padding-left: 3%;
   }
 } // closes hero
@@ -65,6 +65,7 @@
   .flex(space-between, center);
   flex-direction: column;
   margin: auto;
+  text-align: center;
 
   @media @tablet {
     text-align: center;
